cluster-go/applications/devspaces-multi-apps/nodejs/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/joelapatatechaude/web-nodejs-sample
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"web-nodejs-sample:latest","namespace":"multi-apps"},"fieldPath":"spec.template.spec.containers[?(@.name==\"web-nodejs-sample\")].image","pause":"false"}]'
    isFromDevfile: "true"
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: web-nodejs-sample
    app.kubernetes.io/component: web-nodejs-sample
    app.kubernetes.io/instance: web-nodejs-sample
    app.kubernetes.io/name: web-nodejs-sample
    app.kubernetes.io/part-of: web-nodejs-sample-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 16-ubi8
  name: web-nodejs-sample
  namespace: multi-apps
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web-nodejs-sample
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-nodejs-sample
        deployment: web-nodejs-sample
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/multi-apps/web-nodejs-sample:latest
        imagePullPolicy: Always
        name: web-nodejs-sample
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
